fix: [#2081] cannabis-priority: stack buttons on mobile

--- a/web/src/styles/base/flex.scss
+++ b/web/src/styles/base/flex.scss
@@ -94,7 +94,7 @@
 
 .mobile-lg\:flex-row {
   @media (min-width: 30em) {
-    flex-direction: row;
+    flex-direction: row !important;
   }
 }
 
